--- a/css/styles.css
+++ b/css/styles.css
@@ -15,11 +15,8 @@ body {
 }
 
 #contairner_principal{
-    /*background-color: rgb(95, 215, 209);*/
     font-family: 'Montserrat', sans-serif;
     display: grid;
-    /*grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(7, 1fr);*/
 
     grid-template-areas:
     'header header header '
@@ -33,10 +30,7 @@ body {
 
 /* cabecera */
 #cabecera_principal {
-    /*grid-column: 1 /4;
-    grid-row: 1 / 2;*/
     background-image: linear-gradient(to left, #f2c8f2, #e7a4de, #de7dc7, #d552ac, #cb008f);
-    /*background:linear-gradient(90deg, rgba(196,196,198,1) 0%, rgba(223,223,223,1) 35%, rgba(255,255,255,1) 100%);*/
     grid-area: header;
 
     display: flex;
@@ -45,9 +39,7 @@ body {
 }
 
 .logotipo_principal {
-    /*background-color: yellowgreen;*/
     width: 21%;
-/*    height: 120px;*/
     display: flex;
     flex-direction: row;
     justify-content:space-between;
@@ -55,9 +47,6 @@ body {
 }
 
 .logo {
-    /*width: 150px;
-    height: 150px;*/
-    /*border: 3px solid #333;*/
     padding: 1em 2em;
 }
 
@@ -74,11 +63,9 @@ body {
 .redes_sociales{
     width: 150px;
     height: 50px;
-    /*border: 3px solid rgb(205, 45, 45);*/
 }
 
 .redes_sociales ul{
-   /*background-color: purple;*/
     height: 100%;
     display: flex;
     flex-direction: row;
@@ -93,7 +80,6 @@ body {
 
 .redes_sociales ul li a{
     display:inline-block ;
-    /*background-color: rgb(31, 30, 30);*/
     text-decoration: none;
 }
 
@@ -101,7 +87,6 @@ body {
     width: 50%;
     height: 3em;
     margin:auto 0;
-    /*border: 3px solid aqua;*/
     list-style: none;
 
     display: flex;
@@ -114,10 +99,8 @@ body {
 
 
 .menu_principal  li {
-    /*background-color: #fff;*/
     padding: 8px;
     margin-left: 20px;
-    /*border-radius: 50%;*/
 }
 .menu_principal  li:last-child{
     margin-right: 20px;
@@ -142,8 +125,6 @@ hr{
 }
 
 #container_main {
-    /*grid-column: 1 /4;
-    grid-row: 2/ 7; */
     width: 100%;
     background-color: rgb(255, 255, 255);
     -webkit-box-shadow: -1px -30px 22px -15px rgba(203,0,143,0.48);
@@ -168,7 +149,6 @@ hr{
 .precentacion_slogan {
     width: 60%;
     display: flex;
-    border: 2px solid black;
     position: relative;
 
 }
@@ -177,11 +157,9 @@ hr{
     width: 40%;
     height: 500px;
     object-fit: cover;
-    border: 2px solid red;
 }
 
 .precentacion_slogan div{
-    border: 2px solid yellow;
     width: 70%;
     height: 250px;
     position: absolute;
@@ -192,7 +170,7 @@ hr{
 
 .precentacion_slogan div span {
     font-size: 4em;
-    color: #47b4fd;
+    color: rgb(73, 181, 253);
     font-family: 'Dancing Script', cursive;
     font-weight: 700;
     
@@ -207,17 +185,315 @@ hr{
     width: 40%;
 }
 
+.precentacion_logotipo:hover{
+    padding: 30px;
+}
+
+.precentacion_logotipo img:hover{
+    border-radius:50%;
+    -webkit-border-radius:50%;
+    box-shadow: 0px 0px 15px 15px #ec731e;
+    -webkit-box-shadow: 0px 0px 15px 15px #ec731e;
+    transform: rotate(360deg);
+    -webkit-transform: rotate(360deg);
+
+    transition: all .5s ease;
+}
+
+.plan_compra{
+    background-image: linear-gradient(to left, #3e0070, #63007b, #870084, #a9008a, #cb008f);
+    max-width: 80%;
+    min-height: 200px;
+    margin: 20px auto;
+    border-radius: 6%;
+    padding: 10px;  
+
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 30px;
+}
+
+.plan_compra div {
+    width: 300px;
+    border: 2px solid rgb(255, 255, 255);
+    padding: 10px;
+}
+
+.plan_compra div span{
+    display: block;
+    text-align: center;
+    font-weight: 700;
+    font-size: 1.6rem;
+    margin-bottom: 15px;
+    color: rgb(73, 181, 253);
+}
+
+.plan_compra div p{
+    text-align: justify;
+    color: rgb(255, 255, 255);
+    
+}
+
+.plan_compra div a{
+    display: block;
+    text-align: center;
+    margin-top: 20px;
+    text-decoration: none;
+    color: rgb(255, 255, 255);
+}
+
+.plan_compra div a:hover{
+    color: rgb(11, 11, 11);
+    padding: 20px;
+    background: rgb(255, 255, 255);
+    border-radius: 6%;
+}
+
+.segunda_parte {
+    
+}
+
+.colaboradores {
+    margin-bottom: 50px ;
+}
+
+.titulo_C{
+    margin-bottom: 20px;
+}
+.titulo_C h2{
+    text-align: center;
+    
+}
+
+.titulo_C span{
+    display: block;
+    text-align: center;
+}
+
+.colaboradores_targetas{
+   /*background-image: linear-gradient(to top, #222343, #2c3567, #31498e, #2d5eb7, #0f75e2);*/
+}
+
+.streem{
+    width: 90%;
+    min-height: 300px;
+    background-color: rgb(34, 35, 67);
+    border-radius: 25px;
+    padding: 20px;
+    margin: 10px auto;
+    position: relative;
+
+    display: flex;
+}
+
+.seguir{
+    width: 50px;
+    height: 25px;
+    position: absolute;
+    top: 250px;
+    left: 300px;
+    cursor: pointer;
+    outline: 0;
+}
+
+.seguir:hover{
+    font-size: 1.2em;
+    width: 100px;
+    height: 50px;
+    text-transform: uppercase;
+
+    top: 200px;
+    left: 300px;
+}
+
+.streem img{
+    width: 250px;
+    height: 250px;
+    margin: auto 20px;
+}
+
+.streem p{
+    color: rgb(255, 255, 255);
+    margin: auto 0;
+    margin-right: 30px;
+    font-weight: 600;
+}
+
+.streem p:nth-last-child(3){
+    width: 35%;
+}
+
+
+.nosotros_principal{
+    width: 100%;
+}
+
+.nosotros_principal div:nth-last-child(2){
+    text-align: center  ;
+}
+
+#nosotros{
+    font-size: 1.5em;
+    font-weight: 700;
+}
+
+.nosotros_p{
+    margin-top: 20px;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+.nosotros_p iframe{
+    width: 100%;
+    height: 300px;
+}
+
+.titulo_n{
+    display: block;
+    text-align: center;
+    text-decoration: none;
+    font-size: 1.2rem;
+}
+
+.nosotros_p div p a{
+    display: block;
+    text-align: center;
+    text-decoration: none;
+}
+
+.correo{
+    margin: 100px 0;
+}
+.correo_encabezado{
+    text-align: center;
+    margin-bottom: 100px;
+}
+
+.form_c{ /* contenedor formulario principal sin titulo  */
+    width: 70%;
+    border: 3px solid rgb(105, 105, 105);
+    margin: 0 auto;
+    border-radius: 10px;
+
+    -webkit-box-shadow: 0px 0px 17px 4px #6E6E6E; 
+    box-shadow: 0px 0px 17px 4px #6E6E6E;
+
+    display: flex;
+    flex-direction: row;
+}
+
+.logo_form{
+    background: rgb(3, 5, 10);
+    width: 550px;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+
+.logo_form img{
+}
+
+
+.correo_formulario{
+    width: 500px;
+    padding:35px 20px ;
+    margin-left: 30px;
+
+    display: flex;
+    flex-direction: column;
+    gap: 20px 0;
+}
+
+.correo_formulario div{
+}
+.mensaje_form{
+
+}
+.textbox{
+    width: 100%;
+    height: 100%;
+    border: 1px solid #333;
+    text-align: justify;
+    color: #333;
+}
+
+.textbox:focus{
+    border: 3px solid  rgb(50, 104, 174);
+}
+
+.correo_formulario div label{
+    color:  rgb(73, 181, 253);
+    font-weight: 600;
+    display: block;
+}
+
+.dato_parrafo{
+    width: 100%;
+    border: 0;
+    border-bottom: 3px solid rgb(229, 229, 231);
+    padding: 10px;
+}
+
+.dato_parrafo:focus{
+    background-color: rgb(232, 232, 232);
+    color: #ffff;
+}
+
+.check{
+    padding: 10px;
+    
+    display: flex;
+}
+
+.check label{
+    margin-right: 15px;
+}
+
+.tipo_Repo p{
+    margin-bottom: 10px;
+    color:  rgb(73, 181, 253);
+    font-weight: 600;
+}
+
+.enviar{
+    margin: 0 auto;
+}
 
 /* fin del main */
 
 /* inicio de pie*/
 #pie {
-   /* grid-column: 1 / 4;
-    grid-row: 7 / 8;*/
     background-color: rgb(211, 43, 71);
     grid-area: pie;
     display:flex;
     flex-direction: column;
 }
 
+.pie_datos{
+    display: flex;
+    justify-content: space-between;
+}
+
+.copy{
+    text-align: center;
+    color: rgb(255, 255, 255);
+    font-size: 1rem;
+    font-weight: 700;
+}
+
+.ubicacion{
+    padding: 10px;
+}
+
+.ubicacion iframe{
+    width: 400px;
+    height: 400px;
+    border: 0;
+}
 /* fin del pie */
