--- a/scss/header.scss
+++ b/scss/header.scss
@@ -11,14 +11,15 @@
 }
 
 #contairner_principal{
+    /*width: 100%;*/
     font-family: 'Montserrat', sans-serif;
     display: grid;
 
     grid-template-areas:
-    'header header header '
-    'main main main '
-    'main main main '
-    'main main main '
+    'header header header'
+    'main main main'
+    'main main main'
+    'main main main'
     'pie pie pie';
     
 
@@ -108,6 +109,10 @@
             }
         
         }
+    }
+
+    .navbar{
+        display: none;
     }
 }
 
