--- a/scss/mediaQuery.scss
+++ b/scss/mediaQuery.scss
@@ -7,25 +7,317 @@ las medidas de pantallas as grandes a las mas pequeñas o viseversa*/
 
 /* dispositivos grandes como pc y tv */
 
-@media only screen and (max-width: 1200px) {
+@media only screen and (max-width: 1400px) {
     *{
-        background: rgb(214, 199, 31) ;
+        /*background-color: aqua;*/
+    }
+
+#cabecera_principal {
+    .menu_principal{
+        width: 70%;
+        li {
+            
+            &:hover{
+                
+            }
+            a{
+                font-size: 1em;
+            }
+            &:last-child{
+                
+            }
+        
+        }
     }
 }
 
-/* small screen y laptops  */
+    #container_main {
+        max-width: 100%;
+        .primera_parte{    
+            .precentacion {
+                max-width: 100%;
+                .precentacion_slogan {    
+                    img {     
+                    }
+
+                    div{
+                        width: 65%;
+                        span {
+                        }
+                    }
+    
+                    div h2{
+                    }
+            
+                }
+
+                .precentacion_logotipo{
+                    
+                    &:hover{
+                        
+                    }
+
+                    img{
+                        max-width: 100%;
+                        &:hover{
+                            
+                        }
+                    }
+                }
+    
+            }
+        }
+            
+
+        .correo{
+    
+            .correo_encabezado{
+    
+                span{
+                    
+                }
+            }
+    
+            .form_c{ /* contenedor formulario principal sin titulo  */
+                
+    
+                .logo_form{
+                    
+    
+                    img{
+                        max-width: 100%;
+                        object-fit: cover;
+                    }
+                }
+    
+                .correo_formulario{
+                    
+    
+                    .mensaje_form{
+    
+                        .textbox{
+                            
+    
+                            &:focus{
+                                
+                            }
+                        }
+                    }
+    
+                    div{
+    
+                        label{
+                            
+                        }
+    
+                        .dato_parrafo{
+                            
+    
+                            &:focus{
+                                
+                            }
+                        }
+                    }
+
+                    .tipo_Repo{
+    
+                        .check{
+                            
+    
+                            label{
+                                
+                            }
+                        }
+    
+                        p{
+                            
+                        }
+                    }
+    
+                    .enviar{
+                        
+                    }
+                }
+            }
+        }
+    }
+
+/*termino de media query*/
+}
+
+/* small screen y laptops */
 
 @media only screen and (max-width: 1024px) {
     *{
-        background: rgb(19, 175, 29) ;
+        /*background: rgb(19, 175, 29) ;*/
+    }
+
+
+    #container_main {
+        
+        .primera_parte{ 
+
+            .plan_compra{
+                max-width: 95%;
+                div {
+                    width: 300px;
+                    span{
+                        
+                    }
+    
+                    p{
+                        
+                    }
+    
+                    a{
+    
+                        &:hover{
+                            
+                        }
+                    }
+                }
+            }
+
+        }
+
     }
 }
-
 /* Medidas para ipad y tablets */
 
 @media only screen and (max-width: 768px) {
     *{
-        background: rgb(186, 10, 39) ;
+        /*background: rgb(186, 10, 39) ;*/
+    }
+
+    #container_main {
+        
+        .primera_parte{    
+            .precentacion {
+                
+                .precentacion_slogan {    
+                    img {     
+                    }
+
+                    div{
+                        
+                        span {
+                        }
+                    }
+    
+                    div h2{
+                    }
+            
+                }
+
+                .precentacion_logotipo{
+                    
+                    &:hover{
+                        
+                    }
+
+                    img{
+                        
+                        &:hover{
+                            
+                        }
+                    }
+                }
+    
+            }
+
+            .plan_compra{
+                max-width: 100%;
+                flex-wrap: wrap;
+
+                div {
+                    width: 350px;
+                    span{
+                        
+                    }
+    
+                    p{
+                        
+                    }
+    
+                    a{
+    
+                        &:hover{
+                            
+                        }
+                    }
+                }
+            }
+        }
+
+        .correo{
+    
+            .correo_encabezado{
+    
+                span{
+                    
+                }
+            }
+    
+            .form_c{ /* contenedor formulario principal sin titulo  */
+                width: 80%;
+    
+                .logo_form{
+                    
+    
+                    img{
+                    }
+                }
+    
+                .correo_formulario{
+                    
+    
+                    .mensaje_form{
+    
+                        .textbox{
+                            
+    
+                            &:focus{
+                                
+                            }
+                        }
+                    }
+    
+                    div{
+    
+                        label{
+                            
+                        }
+    
+                        .dato_parrafo{
+                            
+    
+                            &:focus{
+                                
+                            }
+                        }
+                    }
+
+                    .tipo_Repo{
+    
+                        .check{
+                            
+    
+                            label{
+                                
+                            }
+                        }
+    
+                        p{
+                            
+                        }
+                    }
+    
+                    .enviar{
+                        
+                    }
+                }
+            }
+        }
     }
 }
 
@@ -33,6 +325,211 @@ las medidas de pantallas as grandes a las mas pequeñas o viseversa*/
 
 @media only screen and (max-width: 480px) {
     *{
-        background: rgb(181, 78, 95) ;
+       /* background: rgb(181, 78, 95) ;*/
+    }
+
+
+    #cabecera_principal {
+
+
+        .logotipo_principal {
+            display: none;
+        }
+        
+
+        .menu_principal{
+            display: none;
+        }
+
+        .navbar{
+            background-image: linear-gradient(to left, #f2c8f2, #e7a4de, #de7dc7, #d552ac, #cb008f);
+            display: flex;
+            width: 100%;
+            min-height: 150px;
+
+            .container-fluid{
+
+                a{
+                    img{
+                        width: 7em;
+                        height: 7em;
+                        border-radius:50%;
+                    }
+                }
+
+                .navbar-toggler{
+                    background-color: rgb(255,255,255);
+                    padding: 20px;
+
+                    .navbar-toggler-icon {
+                        background-color: rgb(255,255,255);
+                    }
+                }
+
+                .collapse{
+                    margin-top: 20px;
+
+                    ul{
+                        li{
+                            border-bottom: 1px solid rgb(180, 178, 178);
+                            cursor:pointer;
+                            a{
+                                font-size: 1.5rem;
+                                color: rgb(255,255,255);
+                                &:hover{
+                                    background-color: rgb(232, 220, 220);
+                                }
+                            }
+                        }
+                    }
+                }
+
+            }
+            &:active{
+                
+                
+            }
+        }
+
+    }
+
+    #container_main {
+        
+        hr{
+            
+        }
+
+        .primera_parte{
+
+            .precentacion {
+                
+                .precentacion_slogan { 
+                    width: 100%;   
+                    img { 
+                        width: 35%;    
+                    }
+
+                    div{
+                        /*top: 180px;*/
+                        right: 80px;
+                        span {
+                        }
+                    }
+    
+                    div h2{
+                    }
+            
+                }
+
+                .precentacion_logotipo{
+                    display: none;
+                    
+                    &:hover{
+                        
+                    }
+
+                    img{
+                        
+                        &:hover{
+                            
+                        }
+                    }
+                }
+    
+            }
+
+            .plan_compra{
+                display: none;
+            }
+
+            .slide{
+                display: block;
+                background-color: rgb(102, 102, 102);
+                /*border: 5px solid #333;*/
+                margin: 40px 0;
+
+                .carousel-inner{
+
+                    .carousel-item{
+
+                        img{
+                            max-height: 500px;
+                        }
+                    }
+                }
+            }
+
+        }
+
+        .correo{
+            .correo_encabezado{
+    
+                span{
+                    
+                }
+            }
+    
+            .form_c{ /* contenedor formulario principal sin titulo  */
+                width: 95%;
+                
+    
+                .logo_form{
+                    
+    
+                    img{
+                    }
+                }
+    
+                .correo_formulario{
+                    
+    
+                    .mensaje_form{
+    
+                        .textbox{
+                            
+    
+                            &:focus{
+                                
+                            }
+                        }
+                    }
+    
+                    div{
+    
+                        label{
+                            
+                        }
+    
+                        .dato_parrafo{
+                            
+    
+                            &:focus{
+                                
+                            }
+                        }
+                    }
+
+                    .tipo_Repo{
+    
+                        .check{
+                            
+    
+                            label{
+                                
+                            }
+                        }
+    
+                        p{
+                            
+                        }
+                    }
+    
+                    .enviar{
+                        
+                    }
+                }
+            }
+        }
     }
 }
+
