--- a/scss/main.scss
+++ b/scss/main.scss
@@ -181,8 +181,9 @@
                     display: flex;
 
                     .seguir{
-                        width: 50px;
-                        height: 25px;
+                        /*width: 50px;
+                        height: 25px;*/
+                        padding: 5px;
                         position: absolute;
                         top: 250px;
                         left: 300px;
