--- a/scss/header.scss
+++ b/scss/header.scss
@@ -9,6 +9,9 @@
     padding: 0;
     box-sizing: border-box;
 }
+body{
+    background-color: rgb(240, 242, 249);
+}
 
 #contairner_principal{
     /*width: 100%;*/
