--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,8 @@ body {
   /*width: 100%;*/
   font-family: 'Montserrat', sans-serif;
   display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(5, auto);
   grid-template-areas: 'header header header' 'main main main' 'main main main' 'main main main' 'pie pie pie'; }
 
 #cabecera_principal {
@@ -461,8 +463,7 @@ las medidas de pantallas as grandes a las mas pequeñas o viseversa*/
   * {
     /* background: rgb(181, 78, 95) ;*/ }
   #contairner_principal {
-    max-width: 100%;
-    grid-template-areas: 'header ' 'main' 'main' 'main' 'pie'; }
+    max-width: 100%; }
   #cabecera_principal {
     max-width: 480px;
     display: block; }
@@ -474,7 +475,7 @@ las medidas de pantallas as grandes a las mas pequeñas o viseversa*/
       background-image: linear-gradient(to left, #f2c8f2, #e7a4de, #de7dc7, #d552ac, #cb008f);
       display: flex;
       max-width: 100%;
-      max-height: 150px; }
+      height: auto; }
       #cabecera_principal .navbar .container-fluid {
         max-width: 100%; }
         #cabecera_principal .navbar .container-fluid a img {
@@ -506,7 +507,7 @@ las medidas de pantallas as grandes a las mas pequeñas o viseversa*/
       #container_main .primera_parte .precentacion .precentacion_slogan div {
         /*top: 180px;*/
         max-width: 60%;
-        right: 0; }
+        right: 10px; }
         #container_main .primera_parte .precentacion .precentacion_slogan div span {
           font-size: 3em; }
     #container_main .primera_parte .precentacion .precentacion_logotipo {
@@ -542,6 +543,12 @@ las medidas de pantallas as grandes a las mas pequeñas o viseversa*/
         max-width: 80%;
         min-height: 350px;
         margin: 0 auto; }
+        #container_main .segunda_parte .colaboradores .colaboradores_targetas .streem .seguir {
+          top: 300px;
+          left: 220px; }
+          #container_main .segunda_parte .colaboradores .colaboradores_targetas .streem .seguir:hover {
+            top: 250px;
+            left: 220px; }
         #container_main .segunda_parte .colaboradores .colaboradores_targetas .streem img {
           min-width: 70%;
           min-height: 400px;
@@ -581,28 +588,30 @@ las medidas de pantallas as grandes a las mas pequeñas o viseversa*/
     max-width: 480px; }
     #pie .pie_datos {
       max-width: 100%;
-      display: flex;
-      justify-content: center;
-      column-gap: 5px; }
+      justify-content: initial;
+      column-gap: 10%; }
       #pie .pie_datos .pie_datos_lista {
-        max-width: 40%; }
+        max-width: 40%;
+        float: left; }
         #pie .pie_datos .pie_datos_lista ul li a {
           font-size: .7em; }
       #pie .pie_datos .pie_datos_info {
-        max-width: 60%; }
+        max-width: 50%;
+        float: right; }
         #pie .pie_datos .pie_datos_info p {
           max-width: 100%; }
         #pie .pie_datos .pie_datos_info ol {
-          max-width: 100%; }
+          max-width: 100%;
+          padding-left: 0; }
           #pie .pie_datos .pie_datos_info ol li {
             font-size: .7em; }
       #pie .pie_datos .ubicacion {
         display: none;
         padding: 5px;
         max-width: 100%; }
-      #pie .pie_datos .ubicacion iframe {
-        max-width: 400px;
-        border: 0; }
+        #pie .pie_datos .ubicacion iframe {
+          max-width: 400px;
+          border: 0; }
     #pie .copy {
       text-align: center;
       color: white;
